--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -5,29 +5,42 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   audit:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.9"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install pandas scikit-learn numpy shap fairlearn
+          fi
 
-    - name: Run audit script
-      run: python scripts/train_and_audit.py
+      - name: Run audit
+        run: |
+          python scripts/run_audit.py
 
-    - name: Upload audit artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: fairness-report
-        path: artifacts/fairness_audit.csv
+      - name: Upload report
+        uses: actions/upload-artifact@v4
+        with:
+          name: rai-report
+          path: |
+            reports/**
+            *.html
+          if-no-files-found: warn
+          retention-days: 30
