--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -11,36 +11,28 @@ permissions:
 jobs:
   audit:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.9'
           cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            pip install pandas scikit-learn numpy shap fairlearn
-          fi
+          pip install -r requirements.txt
 
-      - name: Run audit
-        run: |
-          python scripts/run_audit.py
+      - name: Run audit script
+        run: python scripts/train_and_audit.py
 
-      - name: Upload report
+      - name: Upload audit artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: rai-report
-          path: |
-            reports/**
-            *.html
+          name: fairness-report
+          path: artifacts/fairness_audit.csv
           if-no-files-found: warn
           retention-days: 30
